--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -13,6 +13,10 @@
 .headerTitle span {
   font-size: 2.5rem;
 }
+.headerTitle img {
+  width: 2rem;
+  height: 2rem;
+}
 
 .navbar {
   background-color: var(--color-palet-3);
@@ -39,5 +43,8 @@
   .navbar ul {
     gap: 0;
     justify-content: space-around;
+  }
+  .navbar ul li a {
+    font-size: 1.1rem;
   }
 }
