--- a/src/components/tools/Tools.css
+++ b/src/components/tools/Tools.css
@@ -1,6 +1,7 @@
 .tools h3 {
   margin-bottom: 0;
   animation: toolsHeader 4s;
+  font-size: 2rem;
 }
 
 .toolsSections {
@@ -8,7 +9,7 @@
   flex-direction: row;
   max-width: 70rem;
   align-items: center;
-  min-height: 25rem;
+  min-height: 20rem;
 }
 
 .toolsSections section {
@@ -236,16 +237,14 @@
   }
 }
 
-@keyframes hover1 {
-  to {
-    transform: translate(-1px, -2px);
-  }
-}
-
 /* Mobile */
 @media (max-width: 650px) {
   .toolsSections {
     flex-direction: column;
     overflow: hidden;
+  }
+
+  .tools h3 {
+    font-size: unset;
   }
 }
