--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --max-width: 50rem;
 }
 
-@import url("assets/css/scrollbar.css");
+/* @import url("assets/css/scrollbar.css"); */
 @import url("assets/css/switch.css");
 
 @font-face {
@@ -29,6 +29,13 @@ body {
   min-height: 100%;
   margin: 0;
   font-family: Nunito;
+
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
 }
 
 .container {
