--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -18,6 +18,7 @@
   width: 8rem;
   object-fit: contain;
   border-radius: 50%;
+  margin-top: 3rem;
 }
 
 .experience section h2 {
@@ -82,5 +83,6 @@
   .experience section img {
     width: 4rem;
     height: 4rem;
+    margin-top: 0;
   }
 }
