--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,22 @@
-.header {
+.headerImg {
+  background-position: 0% 75%;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: relative;
+  overflow: hidden;
+  opacity: 0.99;
+}
+.headerImg::before,
+.headerImg::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: opacity 0.5s ease 500ms;
   background-position: 0% 75%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -22,6 +40,7 @@
 .navbar {
   background-color: var(--color-palet-3);
   padding: 1px 0;
+  z-index: 10;
 }
 
 .navbar ul {
