--- a/src/assets/css/switch.css
+++ b/src/assets/css/switch.css
@@ -62,7 +62,7 @@ input:checked + .slider:before {
   max-width: var(--max-width);
   margin: 1rem auto 0 auto;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
