--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -22,6 +22,9 @@
 .contact .icons .icon {
   font-size: 5rem;
   visibility: hidden;
+}
+
+.contact .icons .iconLink {
   transition: all 0.2s;
 }
 
@@ -29,7 +32,7 @@
   color: white;
 }
 
-.contact .icons .icon:hover {
+.contact .icons .iconLink:hover {
   cursor: pointer;
   transform: scale(1.2);
 }
