--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,3 +1,7 @@
+.home {
+  animation: fadeInHome 0.5s;
+}
+
 .me {
   width: 20rem;
   margin: 0 auto;
@@ -21,4 +25,15 @@
 
 .img p {
   text-align: center;
+}
+
+@keyframes fadeInHome {
+  from {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
 }
