--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,26 +1,21 @@
-.headerImg {
-  background-position: 0% 75%;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  /* position: relative;
+.headerBackground {
   overflow: hidden;
-  opacity: 0.99; */
-}
-/* .headerImg::before,
-.headerImg::after {
-  content: "";
-  display: block;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  transition: opacity 0.5s ease 500ms;
-  background-position: 0% 75%;
+}
+
+.headerImg {
+  /* background-position: 0% 75%;
   background-repeat: no-repeat;
-  background-size: cover;
-} */
+  background-size: cover; */
+  pointer-events: none;
+  position: absolute;
+  object-fit: cover;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
 
 .headerTitle {
   width: 100%;
@@ -32,6 +27,7 @@
 .headerTitle span {
   font-size: 2.5rem;
 }
+
 .headerTitle img {
   width: 2rem;
   height: 2rem;
@@ -64,6 +60,7 @@
     gap: 0;
     justify-content: space-around;
   }
+
   .navbar ul li a {
     font-size: 1rem;
   }
