--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,7 +14,8 @@
   object-fit: cover;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: auto;
+  bottom: -11vw;
 }
 
 .headerTitle {
@@ -52,6 +53,13 @@
   font-size: 1.3rem;
   color: var(--text-color);
   text-decoration: none;
+}
+
+@media (max-width: 700px) {
+  .headerImg {
+    height: 100%;
+    bottom: 0;
+  }
 }
 
 /* Mobile */
