--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -32,6 +32,12 @@
   color: var(--text-color);
 }
 
+@media only screen and (max-width: 600px) {
+  .home {
+    margin-top: unset;
+  }
+}
+
 @keyframes fadeInHome {
   from {
     opacity: 0;
